--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,5 +2,4 @@
 <p>
     {{description}}
 </p>
-<a href="/second" routerLinkActive="activebutton"
-ariaCurrentWhenActive="page">Second Component</a>
+<a [routerLink]="['/second']" routerLinkActive="router-link-active">Second Component</a>
